--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,7 @@
 
 <body>
     <div class="container">
-        <h1>Sportwave News</h1>
+        <h1>Sportwave Gallery</h1>
         <div id="news-container"></div>
     </div>
 
