--- a/highlights.html
+++ b/highlights.html
@@ -109,6 +109,8 @@
                 const response = await fetch(noCacheUrl, { cache: 'no-store' });
                 const data = await response.json();
 
+                console.log('Fetched data:', data); // Debugging log to check fetched data
+
                 // Ensure only valid posts (filter deleted/empty ones)
                 const validPosts = data.items.filter(item => item.link && item.title);
 
@@ -123,6 +125,8 @@
             const videoUrls = [];
             // Match iframe URLs from sources like YouTube, Vimeo, etc.
             const iframeTags = description.match(/<iframe[^>]+src="([^"]+)"[^>]*>/g) || [];
+
+            console.log('Extracted iframe tags:', iframeTags); // Debugging log to check iframe tags
 
             iframeTags.forEach(iframeTag => {
                 const urlMatch = iframeTag.match(/src="([^"]+)"/);
@@ -155,7 +159,9 @@
             container.innerHTML = '';
 
             items.forEach((item, index) => {
+                console.log('Processing post:', item); // Debugging log to check post details
                 const videos = extractVideosFromDescription(item.description);
+                console.log('Videos for post:', videos); // Debugging log to check extracted videos
                 const newsItem = document.createElement('div');
                 newsItem.className = 'news-item';
 
