--- a/highlights.html
+++ b/highlights.html
@@ -8,7 +8,7 @@
         /* Basic Styles for the Video Carousel */
         .carousel {
             position: relative;
-            width: 320px;
+            width: 100%;
             margin: auto;
             overflow: hidden;
         }
