--- a/hub.html
+++ b/hub.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>Watch My Twitch Stream</h1>
         <iframe 
-            src="https://player.twitch.tv/?channel=sportwavelive&parent=localhost" 
+            src="https://player.twitch.tv/?channel=sportwavelive&parent=vrfswave.github.io" 
             allowfullscreen>
         </iframe>
 
