--- a/hub.html
+++ b/hub.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitch Stream & Events</title>
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,11 +18,6 @@
             max-width: 900px;
             margin: auto;
             padding: 20px;
-        }
-        iframe {
-            width: 100%;
-            height: 400px;
-            border: none;
         }
         .events {
             display: flex;
@@ -45,15 +41,22 @@
             margin-top: 10px;
             color: #ff4c4c;
         }
+        .twitch-link {
+            margin-top: 20px;
+        }
+        #twitch-embed {
+            width: 100%;
+            height: 400px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Watch My Twitch Stream</h1>
-        <iframe 
-            src="https://player.twitch.tv/?channel=sportwavelive&parent=vrfswave.github.io" 
-            allowfullscreen>
-        </iframe>
+        <div id="twitch-embed"></div>
+        <div class="twitch-link">
+            <a href="https://www.twitch.tv/sportwavelive" target="_blank">Watch on Twitch</a>
+        </div>
 
         <h2>Upcoming Events</h2>
         <div class="events" id="events-container">
@@ -62,40 +65,51 @@
     </div>
 
     <script>
-        // Replace with your Google Sheets ID
+        new Twitch.Embed("twitch-embed", {
+            width: "100%",
+            height: "100%",
+            channel: "sportwavelive",
+            layout: "video",
+            autoplay: true,
+            parent: ["vrfswave.github.io"]
+        });
+
         const SHEET_ID = '1l0Tn9g9cXmQo8-xKOTnMNb_aJ-s9QOJbSrghOyRlvJA';
         const SHEET_URL = `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:csv`;
 
-        // Load events from Google Sheets
         async function loadEvents() {
-            const response = await fetch(SHEET_URL);
-            const csvText = await response.text();
+            try {
+                const response = await fetch(SHEET_URL);
+                const csvText = await response.text();
 
-            const rows = csvText.trim().split('\n').slice(1);
-            const events = rows.map(row => {
-                const [id, title, date, thumbnail] = row.split(',');
-                return { id, title, date, thumbnail };
-            });
+                const rows = csvText.trim().split('\n').slice(1);
+                const events = rows.map(row => {
+                    const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
+                    const [id, title, date, thumbnail] = columns;
+                    return { id, title, date, thumbnail };
+                });
 
-            const container = document.getElementById('events-container');
-            container.innerHTML = '';
+                const container = document.getElementById('events-container');
+                container.innerHTML = '';
 
-            events.forEach(event => {
-                const eventElement = document.createElement('div');
-                eventElement.className = 'event';
-                eventElement.innerHTML = `
-                    <img src="${event.thumbnail}" alt="${event.title}">
-                    <p><strong>${event.title}</strong></p>
-                    <p>${event.date}</p>
-                    <div class="countdown" id="countdown-${event.id}">Loading...</div>
-                `;
-                container.appendChild(eventElement);
+                events.forEach(event => {
+                    const eventElement = document.createElement('div');
+                    eventElement.className = 'event';
+                    eventElement.innerHTML = `
+                        <img src="${event.thumbnail}" alt="${event.title}">
+                        <p><strong>${event.title}</strong></p>
+                        <p>${event.date}</p>
+                        <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                    `;
+                    container.appendChild(eventElement);
 
-                startCountdown(event.date, `countdown-${event.id}`);
-            });
+                    startCountdown(event.date, `countdown-${event.id}`);
+                });
+            } catch (error) {
+                console.error('Error loading events:', error);
+            }
         }
 
-        // Countdown Timer Function
         function startCountdown(eventDate, elementId) {
             const targetDate = new Date(eventDate).getTime();
 
