--- a/hub.html
+++ b/hub.html
@@ -86,7 +86,7 @@
                 const events = rows.map(row => {
                     const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
                     const [id, title, date, thumbnail] = columns;
-                    return { id, title, date, thumbnail };
+                    return { id, title, date: formatDate(date), thumbnail };
                 });
 
                 const container = document.getElementById('events-container');
@@ -108,6 +108,14 @@
             } catch (error) {
                 console.error('Error loading events:', error);
             }
+        }
+
+        function formatDate(dateString) {
+            const date = new Date(dateString);
+            const day = String(date.getDate()).padStart(2, '0');
+            const month = String(date.getMonth() + 1).padStart(2, '0');
+            const year = date.getFullYear();
+            return `${day}/${month}/${year}`;
         }
 
         function startCountdown(eventDate, elementId) {
