--- a/hub.html
+++ b/hub.html
@@ -6,52 +6,149 @@
     <title>Twitch Stream & Events</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #121212;
-            color: white;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #121212;
+            color: #fff;
+            text-align: center;
+            overflow-x: hidden;
+        }
+
         .container {
-            max-width: 900px;
+            max-width: 1100px;
             margin: auto;
-            padding: 20px;
+            padding: 30px;
+            background-color: #1a1a1a;
+            border-radius: 15px;
         }
+
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+            font-weight: 700;
+            color: #e60000;
+        }
+
+        h2 {
+            font-size: 2rem;
+            margin-top: 40px;
+            font-weight: 500;
+            color: #ff5c5c;
+        }
+
+        .twitch-link a {
+            text-decoration: none;
+            color: #ff5c5c;
+            font-size: 1.2rem;
+            font-weight: 600;
+            border-bottom: 2px solid #ff5c5c;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .twitch-link a:hover {
+            color: #fff;
+            background-color: #ff5c5c;
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
+
+        #twitch-embed {
+            margin-top: 20px;
+            width: 100%;
+            height: 450px;
+            border-radius: 15px;
+        }
+
         .events {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            gap: 30px;
+            margin-top: 40px;
         }
+
         .event {
-            width: 250px;
-            background: #222;
-            padding: 10px;
-            border-radius: 8px;
+            background-color: #2e2e2e;
+            border-radius: 12px;
+            overflow: hidden;
+            width: 280px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s ease-in-out;
         }
+
+        .event:hover {
+            transform: scale(1.05);
+        }
+
         .event img {
             width: 100%;
-            border-radius: 5px;
+            height: 180px;
+            object-fit: cover;
+            border-bottom: 2px solid #333;
         }
+
+        .event-content {
+            padding: 15px;
+            background-color: #333;
+            border-radius: 0 0 12px 12px;
+        }
+
+        .event-content p {
+            margin: 5px 0;
+        }
+
+        .event-title {
+            font-size: 1.4rem;
+            font-weight: 600;
+            color: #fff;
+            margin-bottom: 10px;
+        }
+
+        .event-location {
+            font-size: 1rem;
+            color: #b0b0b0;
+            margin-bottom: 8px;
+        }
+
+        .event-time {
+            font-size: 1.2rem;
+            font-weight: 500;
+            color: #ff5c5c;
+            margin-bottom: 15px;
+        }
+
         .countdown {
             font-weight: bold;
-            margin-top: 10px;
-            color: #ff4c4c;
+            color: #ff5c5c;
+            font-size: 1.1rem;
         }
+
         .location {
             font-style: italic;
             margin-top: 5px;
             color: #bbb;
         }
-        .twitch-link {
-            margin-top: 20px;
-        }
-        #twitch-embed {
-            width: 100%;
-            height: 400px;
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+            }
+
+            .event {
+                width: 100%;
+                max-width: 350px;
+                margin-bottom: 20px;
+            }
+
+            #twitch-embed {
+                height: 350px;
+            }
         }
     </style>
 </head>
@@ -102,10 +199,12 @@
                     eventElement.className = 'event';
                     eventElement.innerHTML = `
                         <img src="${event.thumbnail}" alt="${event.title}">
-                        <p><strong>${event.title}</strong></p>
-                        <p class="location">${event.location}</p>
-                        <p>${event.date} at ${event.time}</p>
-                        <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                        <div class="event-content">
+                            <p class="event-title"><strong>${event.title}</strong></p>
+                            <p class="event-location">${event.location}</p>
+                            <p class="event-time">${event.date} at ${event.time}</p>
+                            <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                        </div>
                     `;
                     container.appendChild(eventElement);
 
