--- a/hub.html
+++ b/hub.html
@@ -13,55 +13,54 @@
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #121212;
+            font-family: 'Arial', sans-serif;
+            background-color: #1b1b1b;
             color: #fff;
             text-align: center;
             overflow-x: hidden;
+            padding: 0;
+            margin: 0;
         }
 
         .container {
-            max-width: 1100px;
+            max-width: 1200px;
             margin: auto;
             padding: 30px;
-            background-color: #1a1a1a;
-            border-radius: 15px;
         }
 
         h1 {
             font-size: 3rem;
-            margin-bottom: 10px;
-            font-weight: 700;
-            color: #e60000;
+            color: #FF6F61;
+            margin-bottom: 15px;
         }
 
         h2 {
-            font-size: 2rem;
+            font-size: 2.2rem;
             margin-top: 40px;
-            font-weight: 500;
-            color: #ff5c5c;
+            color: #FF6F61;
+            font-weight: 600;
         }
 
         .twitch-link a {
             text-decoration: none;
-            color: #ff5c5c;
+            color: #FF6F61;
             font-size: 1.2rem;
             font-weight: 600;
-            border-bottom: 2px solid #ff5c5c;
-            transition: all 0.3s ease-in-out;
+            border: 2px solid #FF6F61;
+            padding: 10px 20px;
+            border-radius: 30px;
+            transition: all 0.3s ease;
         }
 
         .twitch-link a:hover {
-            color: #fff;
-            background-color: #ff5c5c;
-            padding: 5px 10px;
-            border-radius: 5px;
+            background-color: #FF6F61;
+            color: white;
         }
 
         #twitch-embed {
             margin-top: 20px;
             width: 100%;
-            height: 450px;
+            height: 500px;
             border-radius: 15px;
         }
 
@@ -69,80 +68,67 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 30px;
-            margin-top: 40px;
+            gap: 40px;
+            margin-top: 50px;
         }
 
         .event {
-            background-color: #2e2e2e;
+            background-color: #2c2c2c;
             border-radius: 12px;
-            overflow: hidden;
-            width: 280px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-in-out;
+            width: 300px;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+            cursor: pointer;
         }
 
         .event:hover {
             transform: scale(1.05);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
         }
 
         .event img {
             width: 100%;
             height: 180px;
             object-fit: cover;
-            border-bottom: 2px solid #333;
+            border-radius: 12px 12px 0 0;
         }
 
-        .event-content {
+        .event-info {
             padding: 15px;
-            background-color: #333;
+            background-color: #383838;
             border-radius: 0 0 12px 12px;
         }
 
-        .event-content p {
-            margin: 5px 0;
-        }
-
-        .event-title {
-            font-size: 1.4rem;
-            font-weight: 600;
-            color: #fff;
+        .event-info h3 {
+            color: #FF6F61;
+            font-size: 1.6rem;
             margin-bottom: 10px;
         }
 
-        .event-location {
-            font-size: 1rem;
-            color: #b0b0b0;
-            margin-bottom: 8px;
+        .event-info p {
+            font-size: 1.1rem;
+            color: #e1e1e1;
+            margin-bottom: 10px;
         }
 
-        .event-time {
-            font-size: 1.2rem;
-            font-weight: 500;
-            color: #ff5c5c;
-            margin-bottom: 15px;
+        .event-info .location {
+            font-size: 0.9rem;
+            color: #aaa;
         }
 
         .countdown {
-            font-weight: bold;
-            color: #ff5c5c;
-            font-size: 1.1rem;
-        }
-
-        .location {
-            font-style: italic;
-            margin-top: 5px;
-            color: #bbb;
+            font-weight: 600;
+            color: #FF6F61;
+            font-size: 1.2rem;
         }
 
         @media (max-width: 768px) {
             .container {
-                padding: 20px;
+                padding: 15px;
             }
 
             .event {
                 width: 100%;
-                max-width: 350px;
+                max-width: 400px;
                 margin-bottom: 20px;
             }
 
@@ -199,10 +185,10 @@
                     eventElement.className = 'event';
                     eventElement.innerHTML = `
                         <img src="${event.thumbnail}" alt="${event.title}">
-                        <div class="event-content">
-                            <p class="event-title"><strong>${event.title}</strong></p>
-                            <p class="event-location">${event.location}</p>
-                            <p class="event-time">${event.date} at ${event.time}</p>
+                        <div class="event-info">
+                            <h3>${event.title}</h3>
+                            <p>${event.date} at ${event.time}</p>
+                            <p class="location">${event.location}</p>
                             <div class="countdown" id="countdown-${event.id}">Loading...</div>
                         </div>
                     `;
