--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitch Stream & Events</title>
+    <title>Twitch Stream & Events | Sportwave</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
         * {
@@ -14,24 +14,27 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #1b1b1b;
             color: #fff;
             text-align: center;
             overflow-x: hidden;
-            padding: 0;
             margin: 0;
+            background: url('https://i.ibb.co/qFV0Ykd5/image.png') no-repeat center center fixed;
+            background-size: cover;
         }
 
         .container {
             max-width: 1200px;
             margin: auto;
             padding: 30px;
+            z-index: 10;
+            position: relative;
         }
 
         h1 {
             font-size: 3rem;
             color: #FF6F61;
             margin-bottom: 15px;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
         }
 
         h2 {
@@ -39,6 +42,7 @@
             margin-top: 40px;
             color: #FF6F61;
             font-weight: 600;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
         }
 
         #twitch-embed {
@@ -57,7 +61,7 @@
         }
 
         .event {
-            background-color: #2c2c2c;
+            background-color: rgba(44, 44, 44, 0.9);
             border-radius: 12px;
             width: 300px;
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
@@ -105,6 +109,28 @@
             font-size: 1.2rem;
         }
 
+        .footer {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .footer img {
+            width: 50px;
+            margin-left: 10px;
+        }
+
+        .footer p {
+            font-size: 1rem;
+            color: #fff;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+        }
+
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -124,6 +150,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 400px; margin-bottom: 20px;">
         <h1>Watch My Twitch Stream</h1>
         <div id="twitch-embed"></div>
 
@@ -131,6 +158,11 @@
         <div class="events" id="events-container">
             <!-- Events will load here -->
         </div>
+    </div>
+
+    <div class="footer">
+        <p>Powered by Sportwave</p>
+        <img src="https://i.ibb.co/vj5yj2B/Wave.png" alt="Sportwave Icon Logo">
     </div>
 
     <script>
