--- a/hub.html
+++ b/hub.html
@@ -18,6 +18,8 @@
             text-align: center;
             overflow-x: hidden;
             margin: 0;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
             background: url('https://i.ibb.co/qFV0Ykd5/image.png') no-repeat center center fixed;
             background-size: cover;
         }
@@ -28,10 +30,14 @@
             padding: 30px;
             z-index: 10;
             position: relative;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 3.5rem;
             color: #FF6F61;
             margin-bottom: 15px;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
@@ -58,6 +64,7 @@
             justify-content: center;
             gap: 40px;
             margin-top: 50px;
+            flex-grow: 1;
         }
 
         .event {
@@ -125,12 +132,6 @@
             margin-left: 10px;
         }
 
-        .footer p {
-            font-size: 1rem;
-            color: #fff;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
-        }
-
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -150,7 +151,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 400px; margin-bottom: 20px;">
+        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 450px; margin-bottom: 20px;">
         <h1>Watch My Twitch Stream</h1>
         <div id="twitch-embed"></div>
 
@@ -161,7 +162,6 @@
     </div>
 
     <div class="footer">
-        <p>Powered by Sportwave</p>
         <img src="https://i.ibb.co/vj5yj2B/Wave.png" alt="Sportwave Icon Logo">
     </div>
 
