--- a/hub.html
+++ b/hub.html
@@ -3,166 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitch Stream & Events | Sportwave</title>
+    <title>Sportwave Live Stream</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
             font-family: 'Arial', sans-serif;
-            color: #fff;
-            text-align: center;
-            overflow-x: hidden;
+            background: #141414; /* Dark background similar to Netflix */
+            color: white;
             margin: 0;
-            height: 100vh;
-            background-color: rgba(0, 0, 0, 0.7);
-            background: url('https://i.ibb.co/qFV0Ykd5/image.png') no-repeat center center fixed;
-            background-size: cover;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 30px;
-            z-index: 10;
-            position: relative;
-            height: 100%;
+            padding: 0;
             display: flex;
             flex-direction: column;
+            align-items: center;
             justify-content: center;
+            height: 100vh;
+            text-align: center;
+            position: relative;
+            overflow: hidden;
         }
-
-        h1 {
-            font-size: 3.5rem;
-            color: #FF6F61;
-            margin-bottom: 15px;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+        .logo {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            width: 150px;
+            height: auto;
         }
-
-        h2 {
-            font-size: 2.2rem;
-            margin-top: 40px;
-            color: #FF6F61;
-            font-weight: 600;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+        .title-image {
+            width: 600px;
+            height: auto;
+            margin-bottom: 10px;
+            position: relative;
+            z-index: 2;
         }
-
-        #twitch-embed {
-            margin-top: 20px;
+        .content {
+            width: 90%;
+            max-width: 1200px;
+            height: 700px;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
+            overflow: hidden;
+            border: 4px solid #f8b500;
+            position: relative;
+            z-index: 2;
+            background: rgba(0, 0, 0, 0.8);
+        }
+        .stadium-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 500px;
+            height: 100%;
+            background: url('https://i.ibb.co/qFV0Ykd5/image.png') no-repeat center center/cover;
+            opacity: 0.2;
+            z-index: 1;
+        }
+        #twitch-embed {
+            width: 100%;
+            height: 100%;
             border-radius: 15px;
         }
-
-        .events {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 40px;
-            margin-top: 50px;
-            flex-grow: 1;
+        .events-container {
+            width: 90%;
+            max-width: 1200px;
+            margin-top: 30px;
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            z-index: 2;
         }
-
-        .event {
-            background-color: rgba(44, 44, 44, 0.9);
-            border-radius: 12px;
-            width: 300px;
-            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
-            cursor: pointer;
-        }
-
-        .event:hover {
-            transform: scale(1.05);
-            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
-        }
-
-        .event img {
-            width: 100%;
-            height: 180px;
-            object-fit: cover;
-            border-radius: 12px 12px 0 0;
-        }
-
-        .event-info {
+        .event-card {
+            background: rgba(0, 0, 0, 0.8);
             padding: 15px;
-            background-color: #383838;
-            border-radius: 0 0 12px 12px;
+            border-radius: 10px;
+            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
+            overflow: hidden;
         }
-
-        .event-info h3 {
-            color: #FF6F61;
-            font-size: 1.6rem;
+        .event-card img {
+            width: 100%;
+            border-radius: 5px;
             margin-bottom: 10px;
         }
-
-        .event-info p {
-            font-size: 1.1rem;
-            color: #e1e1e1;
-            margin-bottom: 10px;
+        .event-card h3 {
+            font-size: 18px;
+            margin: 10px 0;
         }
-
-        .event-info .location {
-            font-size: 0.9rem;
+        .event-card p {
+            font-size: 14px;
             color: #aaa;
         }
-
         .countdown {
-            font-weight: 600;
-            color: #FF6F61;
-            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 10px;
+            color: #f8b500;
         }
-
         .footer {
             position: absolute;
             bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            left: 0;
+            right: 0;
+            text-align: center;
+            font-size: 14px;
+            color: #aaa;
         }
-
-        .footer img {
-            width: 50px;
-            margin-left: 10px;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 15px;
-            }
-
-            .event {
-                width: 100%;
-                max-width: 400px;
-                margin-bottom: 20px;
-            }
-
-            #twitch-embed {
-                height: 350px;
-            }
+        .footer a {
+            color: #f8b500;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 450px; margin-bottom: 20px;">
-        <h1>Watch My Twitch Stream</h1>
+    <div class="stadium-overlay"></div>
+    <img src="https://i.ibb.co/vj5yj2B/Wave.png" alt="Sportwave Icon Logo" class="logo">
+    <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Live Stream" class="title-image">
+    
+    <div id="stream" class="content">
         <div id="twitch-embed"></div>
-
-        <h2>Upcoming Events</h2>
-        <div class="events" id="events-container">
-            <!-- Events will load here -->
-        </div>
     </div>
 
-    <div class="footer">
-        <img src="https://i.ibb.co/vj5yj2B/Wave.png" alt="Sportwave Icon Logo">
+    <div class="events-container" id="events-container">
+        <!-- Events will load here -->
     </div>
 
     <script>
@@ -171,8 +130,7 @@
             height: "100%",
             channel: "sportwavelive",
             layout: "video",
-            autoplay: true,
-            parent: ["vrfswave.github.io"]
+            autoplay: true
         });
 
         const SHEET_ID = '1l0Tn9g9cXmQo8-xKOTnMNb_aJ-s9QOJbSrghOyRlvJA';
@@ -186,8 +144,8 @@
                 const rows = csvText.trim().split('\n').slice(1);
                 const events = rows.map(row => {
                     const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
-                    const [id, title, date, time, location, thumbnail] = columns;
-                    return { id, title, date: formatDate(date), time, location, thumbnail };
+                    const [id, title, date, location, thumbnail] = columns;
+                    return { id, title, date: formatDate(date), location, thumbnail };
                 });
 
                 const container = document.getElementById('events-container');
@@ -195,19 +153,17 @@
 
                 events.forEach(event => {
                     const eventElement = document.createElement('div');
-                    eventElement.className = 'event';
+                    eventElement.className = 'event-card';
                     eventElement.innerHTML = `
                         <img src="${event.thumbnail}" alt="${event.title}">
-                        <div class="event-info">
-                            <h3>${event.title}</h3>
-                            <p>${event.date} at ${event.time}</p>
-                            <p class="location">${event.location}</p>
-                            <div class="countdown" id="countdown-${event.id}">Loading...</div>
-                        </div>
+                        <h3>${event.title}</h3>
+                        <p>${event.location}</p>
+                        <p>${event.date}</p>
+                        <div class="countdown" id="countdown-${event.id}">Loading...</div>
                     `;
                     container.appendChild(eventElement);
 
-                    startCountdown(event.date, event.time, `countdown-${event.id}`);
+                    startCountdown(event.date, `countdown-${event.id}`);
                 });
             } catch (error) {
                 console.error('Error loading events:', error);
@@ -219,24 +175,17 @@
             return `${day}/${month}/${year}`;
         }
 
-        function startCountdown(eventDate, eventTime, elementId) {
+        function startCountdown(eventDate, elementId) {
             const [day, month, year] = eventDate.split('/');
-            const [hour, minute] = eventTime.split(':');
-            const targetDate = new Date(`${year}-${month}-${day}T${hour}:${minute}:00`).getTime();
-            const endDate = targetDate + (2 * 60 * 60 * 1000);  // 2 hours after the event time
+            const targetDate = new Date(`${year}-${month}-${day}`).getTime();
 
             function updateTimer() {
                 const now = new Date().getTime();
                 const timeLeft = targetDate - now;
-                const timePassed = now - endDate;
-
-                if (timePassed > 0) {
-                    document.getElementById(elementId).textContent = 'Finished';
-                    return;
-                }
 
                 if (timeLeft <= 0) {
-                    document.getElementById(elementId).textContent = 'LIVE NOW!';
+                    const eventElement = document.getElementById(elementId);
+                    eventElement.textContent = 'Event Finished';
                     return;
                 }
 
@@ -254,5 +203,9 @@
 
         loadEvents();
     </script>
+
+    <div class="footer">
+        <p>&copy; 2025 Sportwave. All rights reserved. <a href="#">Terms</a> | <a href="#">Privacy</a></p>
+    </div>
 </body>
 </html>
