--- a/hub.html
+++ b/hub.html
@@ -14,7 +14,9 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #1b1b1b;
+            background-image: url('https://i.ibb.co/S4WYbtn6/image.png');
+            background-size: cover;
+            background-position: center;
             color: #fff;
             text-align: center;
             overflow-x: hidden;
@@ -30,7 +32,6 @@
 
         h1 {
             font-size: 3rem;
-            color: #FF6F61;
             margin-bottom: 15px;
         }
 
@@ -124,7 +125,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Watch My Twitch Stream</h1>
+        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 100%; height: auto;">
+        
         <div id="twitch-embed"></div>
 
         <h2>Upcoming Events</h2>
