--- a/hub.html
+++ b/hub.html
@@ -125,7 +125,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Logo" style="max-width: 100%; height: auto;">
+        <img src="https://i.ibb.co/7JCqsJR1" alt="Sportwave Logo" style="max-width: 100%; height: auto;">
         
         <div id="twitch-embed"></div>
 
