--- a/hub.html
+++ b/hub.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitch Stream & Events</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@600&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -31,8 +32,10 @@
         }
 
         h1 {
-            font-size: 3rem;
+            font-family: 'League Spartan', sans-serif;
+            font-size: 4rem;
             margin-bottom: 15px;
+            color: #FF6F61;
         }
 
         h2 {
@@ -125,8 +128,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://i.ibb.co/7JCqsJR1" alt="Sportwave Logo" style="max-width: 100%; height: auto;">
-        
+        <h1>Sportwave Hub</h1>
+
         <div id="twitch-embed"></div>
 
         <h2>Upcoming Events</h2>
