--- a/hub.html
+++ b/hub.html
@@ -64,12 +64,13 @@
             display: flex;
             overflow: hidden;
             width: 80%;
+            justify-content: space-between;
         }
 
         .event {
             background-color: #2c2c2c;
             border-radius: 12px;
-            width: 300px;
+            width: 270px; /* Adjusted width */
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
             cursor: pointer;
             margin: 0 10px;
@@ -125,6 +126,7 @@
             padding: 10px;
             border-radius: 50%;
             cursor: pointer;
+            z-index: 10;
         }
 
         .arrow-left {
