--- a/hub.html
+++ b/hub.html
@@ -63,8 +63,9 @@
         .carousel {
             display: flex;
             overflow: hidden;
-            width: 80%;
-            justify-content: space-between;
+            width: 100%;
+            justify-content: flex-start;
+            gap: 20px;
         }
 
         .event {
@@ -73,7 +74,6 @@
             width: 270px; /* Adjusted width */
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
             cursor: pointer;
-            margin: 0 10px;
         }
 
         .event:hover {
