--- a/hub.html
+++ b/hub.html
@@ -128,35 +128,35 @@
             try {
                 const response = await fetch(SHEET_URL);
                 const csvText = await response.text();
-
                 const rows = csvText.trim().split('\n').slice(1);
-                const events = rows.map(row => {
-                    const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
-                    const [id, title, date, time, location, thumbnail] = columns;
-                    return { id, title, date, time, location, thumbnail };
-                }).sort((a, b) => {
-                    const dateA = new Date(a.date.split('/').reverse().join('-') + 'T' + a.time);
-                    const dateB = new Date(b.date.split('/').reverse().join('-') + 'T' + b.time);
-                    return dateA - dateB;
-                });
-
                 const now = new Date();
                 const container = document.getElementById('events-container');
                 container.innerHTML = '';
 
+                const events = rows.map(row => {
+                    const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
+                    const [id, title, date, time, location, thumbnail, background] = columns;
+                    const eventDate = new Date(date.split('/').reverse().join('-') + 'T' + time);
+                    return { id, title, eventDate, location, thumbnail, background };
+                }).sort((a, b) => a.eventDate - b.eventDate);
+
+                let activeBackground = 'https://i.ibb.co/S4WYbtn6/image.png';
                 events.forEach(event => {
-                    const eventDate = new Date(event.date.split('/').reverse().join('-') + 'T' + event.time);
-                    let countdownText = '';
-                    const timeDiff = eventDate - now;
+                    const timeDiff = event.eventDate - now;
                     const hours = Math.floor(timeDiff / 3600000);
                     const minutes = Math.floor((timeDiff % 3600000) / 60000);
                     const days = Math.floor(hours / 24);
                     const remainingHours = hours % 24;
+                    let countdownText = '';
 
                     if (timeDiff > 0) {
                         countdownText = `Starts in: ${days}d ${remainingHours}h ${minutes}m`;
-                    } else if (now - eventDate < 3600000) {
+                        if (timeDiff <= 3600000) {
+                            activeBackground = event.background || activeBackground;
+                        }
+                    } else if (now - event.eventDate < 3600000) {
                         countdownText = 'LIVE NOW';
+                        activeBackground = event.background || activeBackground;
                     } else {
                         countdownText = 'FINISHED';
                     }
@@ -167,12 +167,13 @@
                         <img src="${event.thumbnail}" alt="${event.title}">
                         <div class="event-info">
                             <h3>${event.title}</h3>
-                            <p>${event.date} at ${event.time}</p>
+                            <p>${event.eventDate.toLocaleDateString()} at ${event.eventDate.toLocaleTimeString()}</p>
                             <p class="location">${event.location}</p>
                             <p class="countdown">${countdownText}</p>
                         </div>`;
                     container.appendChild(eventElement);
                 });
+                document.body.style.background = `#1b1b1b url('${activeBackground}') no-repeat center center/cover`;
             } catch (error) {
                 console.error('Error loading events:', error);
             }
