--- a/hub.html
+++ b/hub.html
@@ -128,7 +128,7 @@
         <div class="channel-buttons">
             <button class="channel-button" onclick="changeChannel('sportwavelive')">Sportwave Live</button>
             <button class="channel-button" onclick="changeChannel('sportwave2')">Sportwave 2</button>
-            <button class="channel-button" onclick="changeChannel('anotherchannel')">Yet Another Channel</button>
+            <button class="channel-button" onclick="changeChannel('sportwavespotlight')">Sportwave Spotlight</button>
         </div>
 
         <h2>Upcoming Events</h2>
