--- a/radio.html
+++ b/radio.html
@@ -26,7 +26,9 @@
 <body>
     <h1>Welcome to Sportwave Radio</h1>
     <div class="player-container">
-        <script src="//myradiostream.com/embed/RD"></script>
+        <iframe src="//myradiostream.com/embed/free.php?s=RD&amp;btnstyle=circle-o&amp;stats=true&amp;id=605150&amp;n=28&amp;p=29736" 
+                name="ahR4fJezCV49" frameborder="0" scrolling="no" 
+                style="width:320px;height:50px;border:0;margin:0;overflow:hidden;border-radius:2px;"></iframe>
     </div>
 </body>
 </html>
